--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>tensquare_recruit</module>
         <module>tensquare_qa</module>
         <module>tensquare_article</module>
+        <module>tensquare_gathering</module>
+        <module>tensquare_spit</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -39,8 +41,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-Test</artifactId>
+            <scope>Test</scope>
         </dependency>
     </dependencies>
 
