--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
         <module>tensquare_gathering</module>
         <module>tensquare_spit</module>
         <module>tensquare_search</module>
+        <module>tensquare_rabbitmq_test</module>
+        <module>tensquare_user</module>
+        <module>tensquare_sms</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -42,8 +45,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-Test</artifactId>
-            <scope>Test</scope>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
