--- a/tensquare_common/pom.xml
+++ b/tensquare_common/pom.xml
@@ -11,5 +11,17 @@
 
     <artifactId>tensquare_common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
