--- a/tensquare_recruit/pom.xml
+++ b/tensquare_recruit/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <artifactId>tensquare_recruit</artifactId>
   <dependencies>
- 		<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -20,5 +20,17 @@
 			<artifactId>tensquare_common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+	    <dependency>
+		   <groupId>org.springframework.cloud</groupId>
+		   <artifactId>spring-cloud-bus</artifactId>
+	    </dependency>
+	    <dependency>
+		   <groupId>org.springframework.cloud</groupId>
+		   <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+	    </dependency>
+	    <dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-actuator</artifactId>
+	    </dependency>
   </dependencies>  
 </project>
